Save terms now works!!

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>pigeo, an easy to use accurate geolocation library</title>
-    <link href="{{ url_for('static', filename='styles/bootstrap-3.3.6-dist/css/bootstrap.min.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/main.css')}}" rel="stylesheet" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAX1L4zo7ald2sBLgnz0OPZDrW9IuGLX_8"></script>
