--- a/templates/Terms.html
+++ b/templates/Terms.html
@@ -11,6 +11,7 @@
             <th>
                 Term
             </th>
+            <th>Action</th>
         </tr>
 
     {% for term in terms %}
@@ -23,6 +24,9 @@
             </td>
             <td>
                 {{ term.Content }}
+            </td>
+            <td>
+                <a class="btn btn-default" href="{{ url_for('delete_term',termId=term.Id) }}">Delete</a>
             </td>
         </tr>
     {%  endfor %}
