--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -45,7 +45,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Terms
+                            Map
                             <span class="caret">
                             </span>
                         </a>
