Changed map colors

--- a/templates/Map.html
+++ b/templates/Map.html
@@ -123,7 +123,7 @@
 		options.chartOptions = {
 			'polarity': {
 				fillColor: '#FEE5D9',
-				minValue: 0,
+				minValue: -1,
 				maxValue: 1,
 				maxHeight: 20,
 				displayText: function (value) {
@@ -131,7 +131,7 @@
 				}
 			},
 			'subjectivity': {
-				fillColor: '#FCAE91',
+				fillColor: '#4169e1',
 				minValue: 0,
 				maxValue: 1,
 				maxHeight: 20,
@@ -140,7 +140,7 @@
 				}
 			},
 			'neg_score': {
-				fillColor: '#FB6A4A',
+				fillColor: '#FF4040',
 				minValue: 0,
 				maxValue: 1,
 				maxHeight: 20,
@@ -149,7 +149,7 @@
 				}
 			},
 			'pos_score': {
-				fillColor: '#CB181D',
+				fillColor: '#008000',
 				minValue: 0,
 				maxValue: 1,
 				maxHeight: 20,
