Fixed special characters error

--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -73,6 +73,9 @@
         <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
         <script src="{{ url_for('static', filename='Leaflet-dvf/js/leaflet-dvf.js') }}"></script>
         <script src="{{ url_for('static', filename='jquery/jquery-ui.js') }}"></script>
+
+        <script src="{{ url_for('static', filename='justgage-1.2.2/raphael-2.1.4.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='justgage-1.2.2/justgage.js') }}"></script>
 {#        <script src="{{ url_for('static', filename='Leaflet-dvf/js/leaflet-dvf.markers.js') }}"></script>#}
     {% block scripts %}{% endblock %}
     </body>
