--- a/templates/ProcessedTweets.html
+++ b/templates/ProcessedTweets.html
@@ -1,10 +1,22 @@
 {%  extends "Layout.html" %}
 {% block body %}
+    <script type="text/javascript">
+        function addLoadEvent(func) {
+          var oldonload = window.onload;
+          if (typeof window.onload != 'function') {
+            window.onload = func;
+          } else {
+            window.onload = function() {
+              if (oldonload) {
+                oldonload();
+              }
+              func();
+            }
+          }
+        }
+    </script>
     <table class="table">
         <tr>
-            <th>
-                Id
-            </th>
             <th>
                 Text
             </th>
@@ -38,10 +50,7 @@
         </tr>
 
     {% for tweet in tweets %}
-        <tr>
-            <td>
-                {{ tweet.id_str }}
-            </td>
+        <tr style="vertical-align: middle">
             <td>
                 {{ tweet.text }}
             </td>
@@ -58,19 +67,69 @@
                 {{ tweet.creation_date }}
             </td>
             <td>
-                {{ tweet.polarity }}
+                <div id="pol_{{ tweet.id_str }}" style="width:100px; height:80px"></div>
+                <script type="text/javascript">
+                    addLoadEvent(function () {
+                        gpol_{{ tweet.Id }} = new JustGage({
+                            id: "pol_{{ tweet.id_str }}",
+                            value:{{ tweet.polarity }}*100,
+                            min:-100,
+                            max:100,
+                            title:"Polarity"
+                        })
+                    })
+                </script>
             </td>
             <td>
-                {{ tweet.subjectivity }}
+                <div id="sub_{{ tweet.id_str }}" style="width:100px; height:80px"></div>
+                <script type="text/javascript">
+                    addLoadEvent(function () {
+                        gsub_{{ tweet.Id }} = new JustGage({
+                            id: "sub_{{ tweet.id_str }}",
+                            value:{{  tweet.subjectivity}}*100,
+                            min:0,
+                            max:100,
+                            title:"Subjectivity"
+                        })
+                    })
+                </script>
             </td>
             <td>
-                {{ tweet.classification }}
+                {% if tweet.classification == 'neg' %}
+                    <span class="label label-danger">{{ tweet.classification }}</span>
+                {% else %}
+                    <span class="label label-success">{{ tweet.classification }}</span>
+                {% endif %}
             </td>
             <td>
-                {{ tweet.neg_score }}
+                <div id="neg_{{ tweet.id_str }}" style="width:100px; height:80px"></div>
+                <script type="text/javascript">
+                    addLoadEvent(function () {
+                        gneg_{{ tweet.Id }} = new JustGage({
+                            id: "neg_{{ tweet.id_str }}",
+                            value:{{  tweet.neg_score}}*100,
+                            min:0,
+                            max:100,
+                            title:"Negative",
+                            levelColorsGradient: false
+                        })
+                    })
+                </script>
             </td>
             <td>
-                {{ tweet.pos_score }}
+                <div id="pos_{{ tweet.id_str }}" style="width:100px; height:80px"></div>
+                <script type="text/javascript">
+                    addLoadEvent(function () {
+                        gpos_{{ tweet.Id }} = new JustGage({
+                            id: "pos_{{ tweet.id_str }}",
+                            value:{{  tweet.pos_score}}*100,
+                            min:0,
+                            max:100,
+                            title:"Positive",
+                            levelColorsGradient: false
+                        })
+                    })
+                </script>
             </td>
         </tr>
     {%  endfor %}
