--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -60,6 +60,26 @@
                                 <a href="{{ url_for('by_cities') }}" >By city</a>
                             </li>
                         </ul>
+                        <li role="separator" class="divider"></li>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Map count
+                            <span class="caret">
+                            </span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="{{ url_for('by_countries_count') }}" >By country</a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('by_states_count') }}" >By state</a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('by_cities_count') }}" >By city</a>
+                            </li>
+                        </ul>
+                        <li role="separator" class="divider"></li>
                     </li>
                 </ul>
                 </div>
